--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -19,5 +19,10 @@ mydb = {
   url = "jdbc:mysql://terraform-20240909163138474900000001.cz28mymaavna.ap-northeast-2.rds.amazonaws.com:3306/akka_db",
   user = "admin",
   password = "admin_password",
-  connectionPool = disabled
+  connectionPool = "HikariCP",  
+  numThreads = 10,              
+  maximumPoolSize = 10,         
+  minimumIdle = 5,             
+  maxLifetime = 30000,          
+  connectionTimeout = 30000     
 }
